force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Last_Heavy_4_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_Heavy_4_Date__c</fullName>
    <label>Z_Unused Last Heavy 4 Date</label>
    <summarizedField>leaseworks__Aircraft_Eligible_Event__c.leaseworks__Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Aircraft_Eligible_Event__c.leaseworks__Event_Type__c</field>
        <operation>equals</operation>
        <value>Heavy Maintenance 4</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>leaseworks__Aircraft_Eligible_Event__c.leaseworks__End_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/1900</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Aircraft_Eligible_Event__c.leaseworks__Aircraft__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>