force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Last_TSN_Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_TSN_Utilization__c</fullName>
    <label>Last TSN (Utilization)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>