force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Last_UR_Approved_For_The_Month_Of__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_UR_Approved_For_The_Month_Of__c</fullName>
    <description>Period Ending (date) of the latest approved Utilization.

5/15/2015 - This is overridden by the new field - &quot;Utilization Current As Of&quot; - which is user editable and set by a WF on UR approval.</description>
    <inlineHelpText>Period Ending of the latest approved Utilization.</inlineHelpText>
    <label>Last Utilization Date</label>
    <summarizedField>leaseworks__Utilization_Report__c.leaseworks__Month_Ending__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Utilization_Report__c.leaseworks__Status__c</field>
        <operation>equals</operation>
        <value>Approved By Lessor</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>leaseworks__Utilization_Report__c.leaseworks__Type__c</field>
        <operation>equals</operation>
        <value>Actual</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Utilization_Report__c.leaseworks__Aircraft__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>