force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Latest_File_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Latest_File_Updated_Date__c</fullName>
    <label>Latest File Updated On</label>
    <type>Date</type>
</CustomField>