force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Lessee_Previous__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_Previous__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Lessee Previous</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Assets (Lessee Previous)</relationshipLabel>
    <relationshipName>Aircraft</relationshipName>
    <type>Lookup</type>
</CustomField>