force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Lessor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Lesor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lessor</label>
    <type>Text</type>
</CustomField>