force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Location__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Location__c</fullName>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>