force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Logo__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Logo__c</fullName>
    <description>Logo of the company that&#39;ll be used when generating PDF document</description>
    <label>Image for SpecSheet</label>
    <type>Url</type>
</CustomField>