force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Maintenance_Adjusted_HLMV__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Adjusted_HLMV__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maintenance Adjusted Half Life market value</inlineHelpText>
    <label>Z_Unused_2203 Maintenance Adjusted HLMV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>