force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Maintenance_Program__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use &quot;MP Update&quot; button to change Maintenance Program assignment.</inlineHelpText>
    <label>Maintenance Program</label>
    <referenceTo>leaseworks__Maintenance_Program__c</referenceTo>
    <relationshipLabel>Assets (Maintenance Program)</relationshipLabel>
    <relationshipName>Aircraft</relationshipName>
    <type>Lookup</type>
</CustomField>