force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Maintenance_Reserve_Engine_3__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_Engine_3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Z_Unused NMR Engine 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>