force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Managing_Company__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Managing_Company__c</fullName>
    <label>Managing Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trust I</fullName>
            </value>
            <value>
                <fullName>Trust III</fullName>
            </value>
            <value>
                <fullName>Aviation Capital Group Corp.</fullName>
            </value>
            <value>
                <fullName>ACGCPS 2011 Pte. Ltd.</fullName>
            </value>
            <value>
                <fullName>ACG Singapore Pte Ltd.</fullName>
            </value>
            <value>
                <fullName>Trust II</fullName>
            </value>
            <value>
                <fullName>BPF3</fullName>
            </value>
            <value>
                <fullName>Avenue Capital</fullName>
            </value>
            <value>
                <fullName>ACG Cap. Partners</fullName>
            </value>
            <value>
                <fullName>ACG FT 2004 - 1</fullName>
            </value>
            <value>
                <fullName>ACG FT 2009-1</fullName>
            </value>
            <value>
                <fullName>ALIP No.22 Co., Ltd.</fullName>
            </value>
            <value>
                <fullName>SMBC</fullName>
            </value>
            <value>
                <fullName>ALIP No.25 Co., Ltd.</fullName>
            </value>
            <value>
                <fullName>MetLife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>