force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Manufacturer__c</fullName>
    <label>Z_Unused_2508 Manufacturer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>