force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Manufacturer_GP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Manufacturer_GP__c</fullName>
    <inlineHelpText>The Manufacturer values come from a &quot;global picklist&quot; that applies throughout LeaseWorks. The list is used with aircraft or engine assets.</inlineHelpText>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Manufacturer_Global</valueSetName>
    </valueSet>
</CustomField>