force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Marketing_Representative_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Marketing_Representative_F__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2106 Marketing Representative</label>
    <type>Text</type>
</CustomField>