force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Marketing_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Marketing_Status__c</fullName>
    <label>Marketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Held for Sale</fullName>
            </value>
            <value>
                <fullName>AOG</fullName>
            </value>
            <value>
                <fullName>EOLA - Parked</fullName>
            </value>
            <value>
                <fullName>EOLA - Contracted</fullName>
            </value>
            <value>
                <fullName>EOLA - Potential</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>