force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Maximum_Landing_Weight_Operational__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maximum_Landing_Weight_Operational__c</fullName>
    <description>This field is either automatically populated from the Spec Masses and Balances related list record &quot;MLW (Maximum Landing Weight)&quot; - Current or from the integration interface (if configured) or manually updated by the user</description>
    <inlineHelpText>This field is either automatically populated from the Spec Masses and Balances related list record &quot;MLW (Maximum Landing Weight)&quot; - Current or from the integration interface (if configured) or manually updated by the user</inlineHelpText>
    <label>MLW(Operational)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>