force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Model_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Model_Code__c</fullName>
    <label>Model Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>