force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__MSN_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MSN_Number__c</fullName>
    <externalId>true</externalId>
    <label>Serial Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>