force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__NBV_As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__NBV_As_of_Date__c</fullName>
    <label>NBV As of Date</label>
    <type>Date</type>
</CustomField>