force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Net_Book_Value_NBV__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Net_Book_Value_NBV__c</fullName>
    <description>Renamed to Aircraft Total FL MVA to match the Valuation terminology</description>
    <inlineHelpText>Total Full Life maintenance adjustment for the aircraft</inlineHelpText>
    <label>Z_Unused Asset Total FL MVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>