force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__New_Used__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__New_Used__c</fullName>
    <label>New/Used?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>