force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Next_Heavy_2_Date_RU__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Next_Heavy_2_Date_RU__c</fullName>
    <description>This is the next scheduled event date by adding &quot;never exceed period month&quot; from Maintenance Program Event to &quot;last event date&quot;. In case &quot;last event date&quot; is not available, &quot;date of manufacture&quot; will be used.</description>
    <inlineHelpText>This is the next scheduled event date by adding &quot;never exceed period month&quot; from Maintenance Program Event to &quot;last event date&quot;. In case &quot;last event date&quot; is not available, &quot;date of manufacture&quot; will be used.</inlineHelpText>
    <label>Z_Unused Next Heavy 2 Date</label>
    <summarizedField>leaseworks__Aircraft_Eligible_Event__c.leaseworks__Next_Scheduled_Event_Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Aircraft_Eligible_Event__c.leaseworks__End_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/1900</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>leaseworks__Aircraft_Eligible_Event__c.leaseworks__Event_Type__c</field>
        <operation>equals</operation>
        <value>Heavy Maintenance 2</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Aircraft_Eligible_Event__c.leaseworks__Aircraft__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>