force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__OEM_MP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__OEM_MP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Type Certificate holders Maintenance Planning Document</inlineHelpText>
    <label>OEM MPD</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Maintenance_Program__c.leaseworks__Is_OEM_c__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Maintenance_Program__c</referenceTo>
    <relationshipLabel>Assets (OEM MP)</relationshipLabel>
    <relationshipName>OEM_MP</relationshipName>
    <type>Lookup</type>
</CustomField>