force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Production_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Production_Number__c</fullName>
    <label>Production Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>