force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Purchase_Price__c</fullName>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>