force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Purchase_Price_At_Delivery_mm__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Purchase_Price_At_Delivery_mm__c</fullName>
    <formula>leaseworks__Base_Purchase_Price_mm__c *((1+ ( leaseworks__Purchase_Price_Yearly_Escalation__c /12))^ leaseworks__Number_Of_Months_To_Delivery__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price At Delivery ($m)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>