force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__RecordTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RecordTypeDevName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_RecordTypeDevName</label>
    <type>Text</type>
</CustomField>