force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Remaining_Lease_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Remaining_Lease_Term_Months__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Remaining_Lease_Term_Mos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Remaining Lease Term Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>