force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Base_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>