force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sale_Price__c</fullName>
    <description>Sale Price of the aircraft.</description>
    <inlineHelpText>Sale Price of the aircraft, used while generating sale journal entries.</inlineHelpText>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>