force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Sold__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asset is sold or not</description>
    <label>Sold</label>
    <type>Checkbox</type>
</CustomField>