force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <description>Tells you if this aircraft is available to be lease out</description>
    <inlineHelpText>Available: can be linked to a Lease; Assigned: Linked to a Lease. Other values are self-explanatory.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
                <label>In Fleet - Lease Attached</label>
            </value>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>In Fleet - Available</label>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Consigned</fullName>
            </value>
            <value>
                <fullName>Not Purchased</fullName>
                <label>Asset created but purchase did not close</label>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>