force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Statutory_Depreciation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Statutory_Depreciation_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statutory Depreciation Schedule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Depreciation_schedule__c.leaseworks__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Depreciation_schedule__c</referenceTo>
    <relationshipName>Aircraft_Statutory</relationshipName>
    <type>Lookup</type>
</CustomField>