force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Threshold_for_C_Check__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Threshold_for_C_Check__c</fullName>
    <description>Threshold hours at which C-Check needs to be performed</description>
    <inlineHelpText>Threshold hours at which C-Check needs to be performed</inlineHelpText>
    <label>Z_Unused Threshold Hours for C-Check</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>