force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Time_Remaining_To_Check__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Time_Remaining_To_Check__c</fullName>
    <formula>if (leaseworks__Threshold_for_C_Check__c=0, 0, leaseworks__Threshold_for_C_Check__c -  leaseworks__Time_Since_Last_C_Check__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Remaining To Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>