force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__TSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSN__c</fullName>
    <description>Time since aircraft was new</description>
    <inlineHelpText>Time since aircraft was new</inlineHelpText>
    <label>TSN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>