force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Utilization_Current_As_Of__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization_Current_As_Of__c</fullName>
    <inlineHelpText>Date of latest snapshot for this asset</inlineHelpText>
    <label>Last Snapshot Date</label>
    <type>Date</type>
</CustomField>