force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Vintage__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Vintage__c</fullName>
    <formula>TEXT(YEAR(leaseworks__Date_of_Manufacture__c)) &amp; &#39;-&#39; &amp; RIGHT(&#39;0&#39;&amp;TEXT(MONTH(leaseworks__Date_of_Manufacture__c)), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vintage</label>
    <type>Text</type>
</CustomField>