force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Y_Hidden_Awarded_Prospect__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Awarded_Prospect__c</fullName>
    <label>_Awarded Prospect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>