force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Y_Hidden_Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Lease_End_Date__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Lease_End_Date_New__c</formula>
    <label>Lease End Date</label>
    <type>Date</type>
</CustomField>