force-app/main/default/objects/leaseworks__Aircraft__c/fields/Likely_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Likely_Outcome__c</fullName>
    <label>Likely Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re-Deploy (ext. or re-lease)</fullName>
            </value>
            <value>
                <fullName>Green-Time Ext</fullName>
            </value>
            <value>
                <fullName>Sale At Lease End</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Finance Lease</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
                <isActive>false</isActive>
                <label>Extension</label>
            </value>
            <value>
                <fullName>Re-Lease</fullName>
                <isActive>false</isActive>
                <label>Re-Lease</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>