force-app/main/default/objects/leaseworks__Aircraft__c/fields/LOI_d__c.field-meta.xml
<CustomField>
    <fullName>LOI_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOI&apos;d?</label>
    <type>Checkbox</type>
</CustomField>