force-app/main/default/objects/leaseworks__Aircraft__c/fields/LOPA_3_Local__c.field-meta.xml
<CustomField>
    <fullName>LOPA_3_Local__c</fullName>
    <formula>IF( LOPA_3_URL_Local__c !=null, IMAGE(LOPA_3_URL_Local__c, &apos;LOPA Unavailable&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For this image to load, please create a Document image in the system and specify path in the LOPA 2 Image URL field</inlineHelpText>
    <label>LOPA 3</label>
    <type>Text</type>
</CustomField>