force-app/main/default/objects/leaseworks__Aircraft__c/fields/LOPA_3_URL_Local__c.field-meta.xml
<CustomField>
    <fullName>LOPA_3_URL_Local__c</fullName>
    <description>This was added at the time of Implementation</description>
    <label>LOPA 3 URL</label>
    <type>Url</type>
</CustomField>