force-app/main/default/objects/leaseworks__Aircraft__c/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets3</relationshipName>
    <type>Lookup</type>
</CustomField>