force-app/main/default/objects/leaseworks__Aircraft__c/fields/MR_Type_on_Lease__c.field-meta.xml
<CustomField>
    <fullName>MR_Type_on_Lease__c</fullName>
    <description>To copy the value of the MR type from the Lease; e.g. MR-paying or EOLA</description>
    <formula>TEXT( leaseworks__Lease__r.leaseworks__Reserve_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the MR type (cash/EOL/other) that has been input on the Lease page. (Local field.)</inlineHelpText>
    <label>MR Type on Lease</label>
    <type>Text</type>
</CustomField>