force-app/main/default/objects/leaseworks__Aircraft__c/fields/Orderbook_Ref__c.field-meta.xml
<CustomField>
    <fullName>Orderbook_Ref__c</fullName>
    <label>Orderbook Ref:</label>
    <length>120</length>
    <type>Text</type>
</CustomField>