force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>pro_Asset_Name__c</fullName>
    <formula>HYPERLINK(&#39;/&#39; &amp; Id, Name)</formula>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>