force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Asset_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>pro_Asset_Type_Formula__c</fullName>
    <description>Field displays the value of the Asset Type field. Used in ACTIVE FLEET report to see Asset Type at row level even when report grouped by Asset Type</description>
    <formula>TEXT(leaseworks__Asset_Type_GP__c)</formula>
    <inlineHelpText>Field displays the value of the Asset Type field. Used in ACTIVE FLEET report to see Asset Type at row level even when report grouped by Asset Type</inlineHelpText>
    <label>Asset Type Formula</label>
    <type>Text</type>
</CustomField>