force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Fund__c.field-meta.xml
<CustomField>
    <fullName>pro_Fund__c</fullName>
    <formula>leaseworks__Asset_Owner_new__r.Fund_Local__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund</label>
    <type>Text</type>
</CustomField>