force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Impact_Type__c.field-meta.xml
<CustomField>
    <fullName>pro_Impact_Type__c</fullName>
    <label>Impact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Russia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>