force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Marketing_Trading__c.field-meta.xml
<CustomField>
    <fullName>pro_Marketing_Trading__c</fullName>
    <description>Field for capturing reporting department for an asset based on actual deal type/activites</description>
    <label>Marketing / Trading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>